# ESP32-Pet-Robot-Firmware

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  FLASH_SPI.c  FLASH_SPI.h  IMU_SPI.c  IMU_SPI.c.bak  IMU_SPI.h  IMU_SPI.h.bak  LED_DRVR.c  LED_DRVR.c.bak  LED_DRVR.h  LED_DRVR.h.bak  LICENSE  MESSAGE_QUEUE.c  MESSAGE_QUEUE.h  MTR_DRVR.c  MTR_DRVR.c.bak  MTR_DRVR.h  MTR_DRVR.h.bak  NAV_ALGO.c  NAV_ALGO.h  README.md  ROBOT_APP.c  ROBOT_APP.c.bak  ToF_I2C.c  ToF_I2C.c.bak  ToF_I2C.h  ToF_I2C.h.bak  UART_CMDS.c  UART_CMDS.h  bindgen_wrapper.h  idf_component.yml  mocked_functions.c  mocked_functions.h  spi_config_data.c  spi_config_data.h  tof_bin_image.c
functional_tests/: CMakeLists.txt  Cargo.toml  build.rs
functional_tests/src/: build.rs  main.rs  message_queue.rs  spi_flash.rs  tof_i2c.rs
